--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 <canvas id="game" width="300" height="600"></canvas>
+  <div id="gameContainer">
+    <!-- ゲームの他の要素 -->
+
+    <div class="centered-text">ノダリス</div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
